--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,16 @@
           <thead>
             <tr>
               <th>ID</th>
-              <th>login</th>
+              <th>login
+                <select id="select_group" onchange="sort_select(this.value)">
+                  <option value="ASC">ASC</option>
+                  <option value="DESC">DESC</option>
+                </select>
+              </th>
               <th>url</th>
               <th>contributions</th>
               <th class="text-center"> 
-                <select id="select_group" onchange="test(this.value)">
+                <select id="select_group" onchange="group_select(this.value)">
                   <option value="All">All</option>
                   <option value="Bronze">Bronze</option>
                   <option value="Silver">Silver</option>
