--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
             <tr>
               <th>ID</th>
               <th>login
-                <select id="select_group" onchange="sort_select(this.value)">
+                <select id="select_group" onchange="sortTable(this.value)">
                   <option value="ASC">ASC</option>
                   <option value="DESC">DESC</option>
                 </select>
@@ -37,7 +37,7 @@
               <th>url</th>
               <th>contributions</th>
               <th class="text-center"> 
-                <select id="select_group" onchange="group_select(this.value)">
+                <select id="select_group" onchange="selectGroup(this.value)">
                   <option value="All">All</option>
                   <option value="Bronze">Bronze</option>
                   <option value="Silver">Silver</option>
