--- a/public/index.html
+++ b/public/index.html
@@ -29,16 +29,16 @@
     <table class="col-md-10 col-md-offset custyle table-bordered table-striped table-condensed cf" id="contributorsTable">
       <thead class="cf">
         <tr>
-          <th>ID</th>
-          <th>login
+          <th data-title="ID">ID</th>
+          <th data-title="login">login
             <select onchange="sortTable(this.value)">
               <option value="ASC">ASC</option>
               <option value="DESC">DESC</option>
             </select>
           </th>
-          <th>url</th>
-          <th>contributions</th>
-          <th class="text-center"> 
+          <th data-title="url">url</th>
+          <th data-title="contributions">contributions</th>
+          <th data-title="Group">
             <select onchange="selectGroup(this.value)">
               <option value="All">All</option>
               <option value="Bronze">Bronze</option>
