Knockout.js: revrited;

--- a/public/index.html
+++ b/public/index.html
@@ -14,52 +14,64 @@
     <title>1 step</title><!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-    <script src="js/table.js"></script>
     <script src="js/knockout-3.5.0.js"></script>
+    <script src="js/table.js"></script>
     <style type="text/css">
       .page-main {
            padding: 20px;
        }
     </style>
   </head>
-  <body></body>
+  <body>
+    <div id="no-more-tables">
+      <div class="row">
+        <div class="col-md-1"></div>
+        <table class="col-md-10 col-md-offset custyle table-bordered table-striped table-condensed cf" id="contributorsTable">
+          <thead class="cf">
+            <tr>
+              <th data-title="ID">ID</th>
+              <th data-title="login">login
+                <select onchange="sortTable(this.value)">
+                  <option value="ASC">ASC</option>
+                  <option value="DESC">DESC</option>
+                </select>
+              </th>
+              <th data-title="url">url</th>
+              <th data-title="contributions">contributions</th>
+              <th data-title="Group">
+                <select onchange="selectGroup(this.value)">
+                  <option value="All">All</option>
+                  <option value="Bronze">Bronze</option>
+                  <option value="Silver">Silver</option>
+                  <option value="Gold">Gold </option>
+                </select>
+              </th>
+            </tr>
+          </thead>
+          <tbody data-bind="foreach: contributors">
+            <tr class="line" style="cursor: grab;" data-toggle="modal" data-bind="attr: { 'data-target' : '#'+id  }">
+              <td id="0" data-bind="text: id" data-title="ID"> </td>
+              <td data-bind="text: login" data-title="login"> </td>
+              <td data-title="url">
+                <p data-bind="text: url"> </p>
+              </td>
+              <td data-title="contributions" data-bind="text: contributions"> </td>
+              <td class="Group" data-title="group" value="Gold" data-bind="text: (contributions &gt; Gold) ? 'Gold' : (contributions &gt; Silver) ? 'Silver' : 'Bronze'">Gold</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </body>
 </html>
-<div id="no-more-tables">
-  <div class="row">
-    <div class="col-md-1"></div>
-    <table class="col-md-10 col-md-offset custyle table-bordered table-striped table-condensed cf" id="contributorsTable">
-      <thead class="cf">
-        <tr>
-          <th data-title="ID">ID</th>
-          <th data-title="login">login
-            <select onchange="sortTable(this.value)">
-              <option value="ASC">ASC</option>
-              <option value="DESC">DESC</option>
-            </select>
-          </th>
-          <th data-title="url">url</th>
-          <th data-title="contributions">contributions</th>
-          <th data-title="Group">
-            <select onchange="selectGroup(this.value)">
-              <option value="All">All</option>
-              <option value="Bronze">Bronze</option>
-              <option value="Silver">Silver</option>
-              <option value="Gold">Gold </option>
-            </select>
-          </th>
-        </tr>
-      </thead>
-      <tbody data-bind="foreach: contributors">
-        <tr class="line" style="cursor: grab;" data-toggle="modal" data-bind="attr: { 'data-target' : '#'+id  }">
-          <td id="0" data-bind="text: id" data-title="ID"> </td>
-          <td data-bind="text: login" data-title="login"> </td>
-          <td data-title="url">
-            <p data-bind="text: url"> </p>
-          </td>
-          <td data-title="contributions" data-bind="text: contributions"> </td>
-          <td class="Group" data-title="group" value="Gold" data-bind="text: (contributions &gt; Gold) ? 'Gold' : (contributions &gt; Silver) ? 'Silver' : 'Bronze'">Gold</td>
-        </tr>
-      </tbody>
-    </table>
+<modals data-bind="foreach: modals">
+  <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" data-bind="attr: { id : id }">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content"><img data-bind="attr: { src : avatar_url }" width="100%">
+        <div class="col" data-bind="text: 'Company - ' + company"> </div>
+        <div class="col" data-bind="text: 'Location - ' + location"> </div>
+        <div class="col" data-bind="text: 'Email - ' + email"> </div>
+      </div>
+    </div>
   </div>
-</div>
+</modals>
